--- a/Curso alura logica de programação JS/Aula 1/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
+++ b/Curso alura logica de programação JS/Aula 1/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" ssorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
@@ -30,6 +30,6 @@
         </div>
       </div>
     </div>
-    <script src="desafio 2/desafio2.js" defer></script>
+    <script src="Aula 2/Desafios/Desafio 2.js" defer></script>
   </body>
 </html>
