--- a/Curso alura logica de programação JS/Aula 1/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
+++ b/Curso alura logica de programação JS/Aula 1/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
@@ -30,6 +30,6 @@
         </div>
       </div>
     </div>
-    <script src="Aula 2/Desafios/Desafio 2.js" defer></script>
+    <script src="app.js" defer></script>
   </body>
 </html>
